--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,24 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="NumberButton">
+        <item name="android:background">@color/dark</item>
+        <item name="android:textColor">@color/greyish</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="HighlightButton">
+        <item name="android:background">@color/dark</item>
+        <item name="android:textColor">@color/dark_highlight</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="HighlightButtonEqual">
+        <item name="android:background">@color/gold</item>
+        <item name="android:textColor">@color/greyish</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
