--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9"
+        app:layout_constraintGuide_percent="0.8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -30,7 +30,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintGuide_percent="0.6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7"
+        app:layout_constraintGuide_percent="0.4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6"
+        app:layout_constraintGuide_percent="0.2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -57,16 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gHor7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3"
+        app:layout_constraintGuide_percent="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -84,7 +75,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25"
+        app:layout_constraintGuide_percent="0.2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -93,7 +84,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintGuide_percent="0.4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -102,12 +93,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"
+        app:layout_constraintGuide_percent="0.6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gVer5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gVer6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -124,7 +124,7 @@
         app:layout_constraintStart_toEndOf="@id/gVer1"
         app:layout_constraintBottom_toTopOf="@id/gHor1"
         app:layout_constraintTop_toBottomOf="@id/gHor2"
-        app:layout_constraintEnd_toStartOf="@id/gVer3" />
+        app:layout_constraintEnd_toStartOf="@id/gVer4" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnComa"
@@ -132,10 +132,10 @@
         style="@style/NumberButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/gVer3"
+        app:layout_constraintStart_toEndOf="@id/gVer4"
         app:layout_constraintBottom_toTopOf="@id/gHor1"
         app:layout_constraintTop_toBottomOf="@id/gHor2"
-        app:layout_constraintEnd_toStartOf="@id/gVer4" />
+        app:layout_constraintEnd_toStartOf="@id/gVer5" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnIgual"
@@ -143,10 +143,10 @@
         style="@style/HighlightButtonEqual"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
+        app:layout_constraintStart_toEndOf="@id/gVer5"
         app:layout_constraintBottom_toTopOf="@id/gHor1"
         app:layout_constraintTop_toBottomOf="@id/gHor2"
-        app:layout_constraintEnd_toStartOf="@id/gVer5" />
+        app:layout_constraintEnd_toStartOf="@id/gVer6" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn1"
@@ -253,10 +253,10 @@
         style="@style/NumberButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintBottom_toTopOf="@id/gHor5"
-        app:layout_constraintTop_toBottomOf="@id/gHor6"
-        app:layout_constraintEnd_toStartOf="@id/gVer4" />
+        app:layout_constraintStart_toEndOf="@id/gVer4"
+        app:layout_constraintBottom_toTopOf="@id/gHor4"
+        app:layout_constraintTop_toBottomOf="@id/gHor5"
+        app:layout_constraintEnd_toStartOf="@id/gVer6" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDivision"
@@ -264,10 +264,10 @@
         style="@style/HighlightButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintBottom_toTopOf="@id/gHor5"
-        app:layout_constraintTop_toBottomOf="@id/gHor6"
-        app:layout_constraintEnd_toStartOf="@id/gVer5" />
+        app:layout_constraintStart_toEndOf="@id/gVer5"
+        app:layout_constraintBottom_toTopOf="@id/gHor2"
+        app:layout_constraintTop_toBottomOf="@id/gHor3"
+        app:layout_constraintEnd_toStartOf="@id/gVer6" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMultiplicar"
@@ -276,8 +276,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintBottom_toTopOf="@id/gHor4"
-        app:layout_constraintTop_toBottomOf="@id/gHor5"
+        app:layout_constraintBottom_toTopOf="@id/gHor2"
+        app:layout_constraintTop_toBottomOf="@id/gHor3"
         app:layout_constraintEnd_toStartOf="@id/gVer5" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -286,10 +286,10 @@
         style="@style/HighlightButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
+        app:layout_constraintStart_toEndOf="@id/gVer5"
         app:layout_constraintBottom_toTopOf="@id/gHor3"
         app:layout_constraintTop_toBottomOf="@id/gHor4"
-        app:layout_constraintEnd_toStartOf="@id/gVer5" />
+        app:layout_constraintEnd_toStartOf="@id/gVer6" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMas"
@@ -298,8 +298,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintBottom_toTopOf="@id/gHor2"
-        app:layout_constraintTop_toBottomOf="@id/gHor3"
+        app:layout_constraintBottom_toTopOf="@id/gHor3"
+        app:layout_constraintTop_toBottomOf="@id/gHor4"
         app:layout_constraintEnd_toStartOf="@id/gVer5" />
 
     <TextView
@@ -311,9 +311,9 @@
         android:layout_marginStart="16dp"
         android:text="@string/buttonCero"
         android:gravity="center|end"
-        app:layout_constraintBottom_toTopOf="@id/gHor6"
-        app:layout_constraintEnd_toStartOf="@id/gVer5"
+        app:layout_constraintBottom_toTopOf="@id/gHor5"
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
         app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@id/gHor7"/>
+        app:layout_constraintTop_toBottomOf="@id/gHor6"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
