--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -24,4 +24,9 @@
         <item name="android:textSize">32sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="ScreenNumber">
+        <item name="android:textColor">@color/greyish</item>
+        <item name="android:textSize">48sp</item>
+    </style>
 </resources>
