--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.CalculadoraKotlin" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:background">@color/opaque_blue</item>
     </style>
 
     <style name="Theme.CalculadoraKotlin" parent="Base.Theme.CalculadoraKotlin" />
@@ -25,5 +24,11 @@
         <item name="android:textColor">@color/highlight_equal</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="ScreenNumber">
+        <item name="android:background">@color/opaque_blue</item>
+        <item name="android:textColor">@color/greyish</item>
+        <item name="android:textSize">48sp</item>
     </style>
 </resources>
