--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,98 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="64"
+    android:viewportHeight="64">
+  <group android:scaleX="0.6"
+      android:scaleY="0.6"
+      android:translateX="12.8"
+      android:translateY="12.8">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M31.8,32m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
+        android:strokeWidth="0.00064"
+        android:fillColor="#7681c3"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M44,39m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M44,51m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M26,22h-4v-4c0,-1.1 -0.9,-2 -2,-2s-2,0.9 -2,2v4h-4c-1.1,0 -2,0.9 -2,2c0,1.1 0.9,2 2,2h4v4c0,1.1 0.9,2 2,2s2,-0.9 2,-2v-4h4c1.1,0 2,-0.9 2,-2C28,22.9 27.1,22 26,22z"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M38,26h12c1.1,0 2,-0.9 2,-2c0,-1.1 -0.9,-2 -2,-2H38c-1.1,0 -2,0.9 -2,2C36,25.1 36.9,26 38,26z"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M50,43H38c-1.1,0 -2,0.9 -2,2c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2C52,43.9 51.1,43 50,43z"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M26.8,39.2c-0.8,-0.8 -2,-0.8 -2.8,0l-4,4l-4,-4c-0.8,-0.8 -2,-0.8 -2.8,0c-0.8,0.8 -0.8,2 0,2.8l4,4l-4,4c-0.8,0.8 -0.8,2 0,2.8s2,0.8 2.8,0l4,-4l4,4c0.8,0.8 2,0.8 2.8,0s0.8,-2 0,-2.8l-4,-4l4,-4C27.6,41.2 27.6,40 26.8,39.2z"
+        android:strokeAlpha="0.2"
+        android:strokeWidth="0.00064"
+        android:fillColor="#231F20"
+        android:strokeColor="#000000"
+        android:fillAlpha="0.2"/>
+    <path
+        android:pathData="M44,37m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeWidth="0.00064"
+        android:fillColor="#E0E0D1"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M44,49m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeWidth="0.00064"
+        android:fillColor="#E0E0D1"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M28,22c0,1.1 -0.9,2 -2,2H14c-1.1,0 -2,-0.9 -2,-2l0,0c0,-1.1 0.9,-2 2,-2h12C27.1,20 28,20.9 28,22L28,22z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#F5CF87"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M52,22c0,1.1 -0.9,2 -2,2H38c-1.1,0 -2,-0.9 -2,-2l0,0c0,-1.1 0.9,-2 2,-2h12C51.1,20 52,20.9 52,22L52,22z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#E0995E"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M20,30c-1.1,0 -2,-0.9 -2,-2V16c0,-1.1 0.9,-2 2,-2l0,0c1.1,0 2,0.9 2,2v12C22,29.1 21.1,30 20,30L20,30z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#F5CF87"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M52,43c0,1.1 -0.9,2 -2,2H38c-1.1,0 -2,-0.9 -2,-2l0,0c0,-1.1 0.9,-2 2,-2h12C51.1,41 52,41.9 52,43L52,43z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#E0E0D1"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M26.8,50.8c-0.8,0.8 -2,0.8 -2.8,0L13.2,40c-0.8,-0.8 -0.8,-2 0,-2.8l0,0c0.8,-0.8 2,-0.8 2.8,0L26.8,48C27.6,48.8 27.6,50 26.8,50.8L26.8,50.8z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#76C2AF"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M13.2,50.8c-0.8,-0.8 -0.8,-2 0,-2.8L24,37.2c0.8,-0.8 2,-0.8 2.8,0l0,0c0.8,0.8 0.8,2 0,2.8L16,50.8C15.2,51.6 14,51.6 13.2,50.8L13.2,50.8z"
+        android:strokeWidth="0.00064"
+        android:fillColor="#76C2AF"
+        android:strokeColor="#000000"/>
+  </group>
 </vector>
